Add detail page

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -336,3 +336,21 @@ ul.list-wrap {
   color: #F50707;
   text-shadow: 0 0 5px rgba(255, 104, 104, 0.5);  
 }
+
+
+.img-thumbnail {
+  display: inline-block;
+  max-width: 100%;
+  height: auto;
+  padding: 4px;
+  line-height: 1.42857143;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  -webkit-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+.detail img {
+  margin: 10px;
+}
